--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head> 
+    <src type="text/css" href="./index.css">
+  </head>
   <body>
     <h1> Fast guides </h1>
     <h2> English </h2>
