--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head> 
-    <src type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="./index.css" >
   </head>
   <body>
     <h1> Fast guides </h1>
