--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
   </head>
   <body>
     <h1> Fast guides </h1>
-    <h2> English </h2>
-    <ol>
-      <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Docker_eng.pdf"> Docker </a> </li>
-      <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Git_eng.pdf"> Git <a/> </li>
-      <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Conda_brief_eng.pdf"> Conda </a> </li>
-    </ol>
-    <br/>
-    <h2> Italiano </h2>
-    <ol>
-      <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/GraphQL_ita.pdf"> GraphQL </a> </li>
-    </ol>
+    <div id="content">
+      <h2> English </h2>
+      <ol>
+        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Docker_eng.pdf"> Docker </a> </li>
+        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Git_eng.pdf"> Git <a/> </li>
+        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Conda_brief_eng.pdf"> Conda </a> </li>
+      </ol>
+      <br/>
+      <h2> Italiano </h2>
+      <ol>
+        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/GraphQL_ita.pdf"> GraphQL </a> </li>
+      </ol>
+    </div>
   </body>
 </html>
