index.html update

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
     <link rel="stylesheet" type="text/css" href="./index.css" >
   </head>
   <body>
-    <h1> Fast guides </h1>
+    <h1> Giulia Callegarin - Computer Science portfolio </h1>
     <div id="content">
-      <h2> English </h2>
-      <ol>
-        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Docker_eng.pdf"> Docker </a> </li>
-        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Git_eng.pdf"> Git <a/> </li>
-        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Conda_brief_eng.pdf"> Conda </a> </li>
-      </ol>
-      <br/>
-      <h2> Italiano </h2>
-      <ol>
-        <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/GraphQL_ita.pdf"> GraphQL </a> </li>
-      </ol>
+      <h2> Guides </h2>
+        <h3> English </h3>
+          <ol>
+            <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Docker_eng.pdf"> Docker </a> </li>
+            <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Git_eng.pdf"> Git <a/> </li>
+            <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/Conda_brief_eng.pdf"> Conda </a> </li>
+          </ol>
+        <br/>
+        <h3> Italiano </h3>
+          <ol>
+            <li> <a href="https://github.com/GiuliaCalle/giuliacalle.github.io/blob/master/GraphQL_ita.pdf"> GraphQL </a> </li>
+          </ol>
     </div>
   </body>
 </html>
