--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head> 
-    <link rel="stylesheet" type="text/css" href="index.css" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title> GiuliaCalle - Computer Science portfolio </title>
   </head>
   <body>
     <h1> Giulia Callegarin - Computer Science portfolio </h1>
