--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="https://giuliacalle.github.io/index.css">
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/giuliacalle/giuliacalle.github.io/master/index.css">
     <title> GiuliaCalle - Computer Science portfolio </title>
   </head>
   <body>
